Fixed margin issue on smallest screen size

--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ a:hover * {
     }
 
     .nav-links {
-        margin: 10px 0;
+        margin-bottom: 10px;
     }
 
     .size-bigger,
